# playground

./: LICENSE  pyproject.toml  readme.md
python/: pandas.ipynb
python/etl_eta/: basic_transform.ipynb  brief_info.ipynb  confusion_matrix.ipynb  feature_importance.ipynb  one_hot.ipynb
python/etl_eta/data/: cleaner_sample.parquet
python/gcs/: spark.ipynb
python/s3/: rw.ipynb  spark.ipynb
python/web/: graceful.ipynb
shell/: info.ipynb
