[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["JChien <jeffchien13@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "^1.0.0"
numpy = "^1.23.1"
pandas = "^1.4.3"
s3fs = "^2022.7.1"
pyarrow = "^9.0.0"
pyspark = "^3.3.0"
matplotlib = "^3.5.2"
scipy = "^1.9.0"
sklearn = "^0.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
